# gofi

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
gofi/: __init__.py  occluded_factor.py  ogoal_recognition.py  ogoals_probabilities.py  omcts.py  omcts_results.py  orollout.py  osimulation.py  osimulation_env.py  otree.py
gofi/agents/: __init__.py  gofi_agent.py  occluded_agent.py  pedestrian_agent.py
gofi/map/: __init__.py  occlusion_visualisation.py  omap.py  polygon_patch.py  static_object.py
gofi/planning/: __init__.py  omcts.py  orollout.py  otree.py
gofi/recognition/: __init__.py  ogoal_recognition.py  ogoals_probabilities.py
scenarios/configs/: scenario1.json  scenario2.json  scenario3.json  scenario4.json  test.json
scripts/: run.py
scripts/debug/: playground.py
